# PathTracer

./: .gitignore  BiDirectionalPathTracer.cpp  BiDirectionalPathTracer2.h  CMakeLists.txt  Camera.cpp  Camera.h  KDTree.cpp  KDTree.h  LightIntensity.cpp  LightIntensity.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  PhotonMap.cpp  PhotonMap.h  README.md  RayTracer.cpp  RayTracer.h  Renderer.pro  Renderer.pro.user.2.5pre1  StreamPhotonMap.cpp  StreamPhotonMap.h  Texture.cpp  Texture.h  bidirectionalpathtracer.cpp  bidirectionalpathtracer.h  main.cpp  rendererpanel.cpp  test.cpp
BidirectionalPathTracer/: BiDirectionalPathTracer.cpp  BiDirectionalPathTracer.h  BlinnPhongBrdf.cpp  BlinnPhongBrdf.h  Node.cpp  Node.h  brdf.cpp  brdf.h  dotBrdf.cpp  dotBrdf.h  hemispherePdf.cpp  hemispherePdf.h  normalPdf.cpp  normalPdf.h  outNormalBrdf.cpp  outNormalBrdf.h  pathtracer.cpp  pathtracer.h  pdf.cpp  pdf.h  semicirclePdf.cpp  semicirclePdf.h
Geometry/: CornellBox.cpp  Geometry.h  MS3DModel.cpp  Sphere.cpp  Sphere.h  Triangle.cpp
Lights/: AmbientLight.cpp  AmbientLight.h  AreaLight.cpp  AreaLight.h  POINTLight.cpp  POINTLight.h
Math/: Matrix4x4.cpp  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Vector3.cpp  Vector3.h  Vector4.h  randomUtils.cpp  randomUtils.h
