cmake_minimum_required(VERSION 2.8.4)
project(PathTracer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    BidirectionalPathTracer/BidirectionalPathTracer.cpp
    BidirectionalPathTracer/BiDirectionalPathTracer.h
    BidirectionalPathTracer/BlinnPhongBrdf.cpp
    BidirectionalPathTracer/BlinnPhongBrdf.h
    BidirectionalPathTracer/brdf.cpp
    BidirectionalPathTracer/brdf.h
    BidirectionalPathTracer/Node.cpp
    BidirectionalPathTracer/Node.h
    BidirectionalPathTracer/normalPdf.cpp
    BidirectionalPathTracer/normalPdf.h
    BidirectionalPathTracer/pdf.cpp
    BidirectionalPathTracer/pdf.h
    Geometry/Box.cpp
    Geometry/Box.h
    Geometry/CornellBox.cpp
    Geometry/CornellBox.h
    Geometry/Geometry.h
    Geometry/MS3DModel.cpp
    Geometry/MS3DModel.h
    Geometry/Sphere.cpp
    Geometry/Sphere.h
    Geometry/Triangle.cpp
    Geometry/Triangle.h
    Lights/AmbientLight.cpp
    Lights/AmbientLight.h
    Lights/AreaLight.cpp
    Lights/AreaLight.h
    Lights/POINTLight.cpp
    Lights/POINTLight.h
    Math/Matrix4x4.cpp
    Math/Matrix4x4.h
    Math/Plane.cpp
    Math/Plane.h
    Math/Ray.cpp
    Math/Ray.h
    Math/Vector2.cpp
    Math/Vector2.h
    Math/Vector3.cpp
    Math/Vector3.h
    Math/Vector4.cpp
    Math/Vector4.h
    Camera.cpp
    Camera.h
    DisplayWindow.cpp
    DisplayWindow.h
    Image.cpp
    Image.h
    KDTree.cpp
    KDTree.h
    LightIntensity.cpp
    LightIntensity.h
    main.cpp
    MainWindow.cpp
    MainWindow.h
    Material.cpp
    Material.h
    PhotonMap.cpp
    PhotonMap.h
    RayTracer.cpp
    RayTracer.h
    rendereroptions.cpp
    rendereroptions.h
    rendererpanel.cpp
    rendererpanel.h
    Scene.cpp
    Scene.h
    StreamPhotonMap.cpp
    StreamPhotonMap.h
    test.cpp
    Texture.cpp
    Texture.h)

add_executable(PathTracer ${SOURCE_FILES})